--- a/index.css
+++ b/index.css
@@ -1,16 +1,15 @@
-body{display: flex;
+body{
     background-image: linear-gradient(green, purple, blue,rgb(0, 255, 55),rgb(255, 0, 242));
     margin: 0;
 
 }
 main{
-    background-color: rgb(0, 255, 213);
+    background-color: rgb(0, 148, 123);
     width: 1200px;
     height: 100vh;
     padding: 100px;
-    right: 50%;
-    left: 50%;
     border-radius: 20px;
+    right: 100px;
 
 
 }
@@ -27,6 +26,8 @@ main{
     width: 270px;
     height: 100vh;
     padding: auto;
+    border-right: 5px;
+    border-color: brown;
     
 
 }
@@ -38,3 +39,10 @@ main{
 }
 td{color: blue;}
 th{color: indigo;}
+.nav-bar a{
+    color: aliceblue;
+    text-decoration: none;
+}
+.nav-bar a:hover{
+    color: blueviolet;
+}
